# rust-future

./: .gitignore  README.md
chentian/: Cargo.toml
getinfo/: Cargo.toml
getinfo/src/: client.rs
guessing_game/: Cargo.toml
jeremy-chone-axum/: Cargo.toml  Makefile
jeremy-chone-axum/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
jeremy-chone-axum/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
jeremy-chone-axum/tests/: quick_dev.rs
mike/: Cargo.toml
mike-axum/axum-examples/: Cargo.toml  Makefile  docker-compose.yaml
mike-axum/axum-examples/examples/: askama_template.rs  basic_opration.rs  database.rs  form_json_rejection.rs  hello_world.rs  todolist.rs
mike-axum/axum-examples/templates/: hello.html
mike-axum/axum-examples/tests/: quick_dev.rs
mike-axum/axum-helloworld/: Cargo.toml
mike-axum/axum-staticfile-logger-query/: CMakeLists.txt  Cargo.toml  Makefile
mike-basic/: Cargo.toml
mike-basic/examples/: async_tokio_channel.rs  async_tokio_note.rs  basic_syntax.rs  compound_type.rs  error_handling_system.rs  lifecycle.rs  macro.rs  option_result_iter.rs  ownership.rs  smart_pointer.rs  string.rs  struct.rs  trait.rs  trait_common.rs
mike-candle-chat/: Cargo.toml  README.md
mike-candle-chat/src/: cli.rs  simple.rs  token_output_stream.rs
mike-getinfo/: Cargo.toml
mike-snake/: Cargo.toml
mike-snake/examples/: 01_beginning.rs  02_window.rs  03_snake_head.rs  04_snake_move.rs  05_snake_control.rs  06_grid.rs  07_move_on_grid.rs  08_config_window.rs  09_food_spawning.rs  10_food_timer.rs  11_auto_snake.rs  12_segments.rs  13_attach_tail.rs  14_eat_and_grow.rs
mike-snake/src/: main.rs
mike/examples/: async_rust.rs  async_tokio_mutex.rs  basic_syntax.rs  bigint.rs  compound_type.rs  ownership.rs  (+10 more)
mike_getinfo/: Cargo.toml
mike_getinfo/src/: server.rs
rust_base/: Cargo.toml
rust_book/: Cargo.toml
the-rust-pl/: Cargo.toml
the_rust_pl/: Cargo.toml
(+7 files in other folders)
