[package]
name = "axum-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "^0.7"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "^1.35.0", features = ["full"] }
tokio-postgres = "0.7.10"
tower-http = { version = "^0.5", features = ["fs", "trace"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "^1.0"
httpc-test = "^0.1"
